fixinf service title in spec
